# report_generator_llama

./: README.md  pyproject.toml
app/: index.py
app/llm/: llama.py
app/loaders/: db.py  file.py
