[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "João Lima <joaolevi777@gmail.com>" ]

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-dotenv = "^1.0.0"
llama-index = "0.10.41"
llama-index-core = "0.10.41"
transformers = "4.41.2"
torch = "2.3.1"
pdf2image = "1.17.0"
sentencepiece = "0.2.0"
pytesseract = "0.3.10"
llama-index-llms-ollama = "0.1.5"
llama-index-embeddings-ollama = "0.1.2"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"

[tool.poetry.dependencies.traceloop-sdk]
version = "^0.15.11"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"